--- a/GameJame2022/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameJame2022/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,6 +76,13 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[MRU]
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+
+[ContentBrowser]
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
+
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
@@ -84,12 +91,16 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownController.TopDownController
 OpenAssetsAtExit=/Game/Blueprints/Character/BoardCharacters/BP_BoardBaseCharacter.BP_BoardBaseCharacter
 OpenAssetsAtExit=/Game/Blueprints/Character/ActionCharacters/BP_ActionBaseCharacter.BP_ActionBaseCharacter
+OpenAssetsAtExit=/Game/Blueprints/Spaces/BP_BoardSpace.BP_BoardSpace
+OpenAssetsAtExit=/Engine/Functions/Engine_MaterialFunctions01/Gradient/RadialGradientExponential.RadialGradientExponential
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Spaces/BP_BoardSpace
-MRUItem1=/Game/Character/BP_ActionBaseCharacter
-MRUItem2=/Game/Character/BP_BaseCharacter
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownController
+MRUItem0=/Engine/Functions/Engine_MaterialFunctions01/Gradient/RadialGradientExponential
+MRUItem1=/Game/Materials/M_SpaceBase
+MRUItem2=/Game/Blueprints/Spaces/BP_BoardSpace
+MRUItem3=/Game/Character/BP_ActionBaseCharacter
+MRUItem4=/Game/Character/BP_BaseCharacter
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownController
 
 [DetailCategories]
 TopDownController_C.Default=True
@@ -410,6 +421,50 @@ BP_ActionBaseCharacter_C.Pawn=True
 BP_ActionBaseCharacter_C.Replication=True
 BP_ActionBaseCharacter_C.Actor=True
 BP_ActionBaseCharacter_C.Input=True
+BP_BoardSpace_C.Tick=True
+BP_BoardSpace_C.Replication=True
+BP_BoardSpace_C.Rendering=True
+BP_BoardSpace_C.Collision=True
+BP_BoardSpace_C.Actor=True
+BP_BoardSpace_C.Input=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionFunctionOutput.MaterialExpressionFunctionOutput=True
+MaterialExpressionFunctionOutput.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+BP_BoardSpace_C.TransformCommon=True
 
 [PluginBrowser]
 InstalledPlugins=EasyMultiSave
@@ -419,4 +474,7 @@ InstalledPlugins=XRVisualization
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
+
+[PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Spaces/BP_BoardSpace.BP_BoardSpace;
 
