Added in Dice Manager and die blocks
The die blocks produce the number based on what is facing up

--- a/GameJame2022/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameJame2022/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=1080,Y=340)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -100,6 +100,8 @@ LastExecutedLaunchName=DESKTOP-15LJ0HV
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
+MultipleInstancePositions=(X=1080,Y=340)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -126,7 +128,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/Maps/CoopersPlayground
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
@@ -135,6 +138,8 @@ bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 UserDefinedStruct=
+PropertyWrapper=
+BP_DiceManager_C=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Stats
@@ -160,38 +165,37 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownController.TopDownController
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/Character/BoardCharacters/BP_BoardBaseCharacter.BP_BoardBaseCharacter
-OpenAssetsAtExit=/Game/Blueprints/Character/ActionCharacters/BP_ActionBaseCharacter.BP_ActionBaseCharacter
-OpenAssetsAtExit=/Game/Blueprints/Spaces/BP_BoardSpace.BP_BoardSpace
-OpenAssetsAtExit=/Game/Blueprints/Stats/E_Stat.E_Stat
-OpenAssetsAtExit=/Game/Blueprints/Gear/S_GearBuff.S_GearBuff
-OpenAssetsAtExit=/Game/Blueprints/Stats/S_StatBuff.S_StatBuff
-OpenAssetsAtExit=/Game/Blueprints/Gear/S_GearBase.S_GearBase
-OpenAssetsAtExit=/Game/Blueprints/Gear/E_GearType.E_GearType
-OpenAssetsAtExit=/Game/Blueprints/Items/S_Item.S_Item
-OpenAssetsAtExit=/Game/Blueprints/Items/E_ItemType.E_ItemType
+OpenAssetsAtExit=/Game/Blueprints/Dice/BP_Die.BP_Die
+OpenAssetsAtExit=/Game/Blueprints/Dice/BP_DiceManager.BP_DiceManager
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Stats/S_StatBuff
-MRUItem1=/Game/Blueprints/Gear/S_GearBuff
-MRUItem2=/Game/Blueprints/Gear/E_Stat
-MRUItem3=/Game/Blueprints/Items/E_ItemType
-MRUItem4=/Game/Blueprints/Items/S_Item
-MRUItem5=/Game/Blueprints/Gear/E_GearType
-MRUItem6=/Game/Blueprints/Gear/S_GearBase
-MRUItem7=/Engine/Functions/Engine_MaterialFunctions01/Gradient/RadialGradientExponential
-MRUItem8=/Game/Materials/M_SpaceBase
-MRUItem9=/Game/Blueprints/Spaces/BP_BoardSpace
-MRUItem10=/Game/Character/BP_ActionBaseCharacter
-MRUItem11=/Game/Character/BP_BaseCharacter
-MRUItem12=/Game/TopDownBP/Blueprints/TopDownController
+MRUItem0=/Game/Blueprints/Dice/BP_DiceManager
+MRUItem1=/Game/Blueprints/Dice/BP_Die
+MRUItem2=/Game/Blueprints/Character/BoardCharacters/BP_BoardBaseCharacter
+MRUItem3=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem4=/Game/Maps/CoopersPlayground
+MRUItem5=/Game/Blueprints/Stats/S_StatBuff
+MRUItem6=/Game/Blueprints/Gear/S_GearBuff
+MRUItem7=/Game/Blueprints/Gear/E_Stat
+MRUItem8=/Game/Blueprints/Items/E_ItemType
+MRUItem9=/Game/Blueprints/Items/S_Item
+MRUItem10=/Game/Blueprints/Gear/E_GearType
+MRUItem11=/Game/Blueprints/Gear/S_GearBase
+MRUItem12=/Engine/Functions/Engine_MaterialFunctions01/Gradient/RadialGradientExponential
+MRUItem13=/Game/Materials/M_SpaceBase
+MRUItem14=/Game/Blueprints/Spaces/BP_BoardSpace
+MRUItem15=/Game/Character/BP_ActionBaseCharacter
+MRUItem16=/Game/Character/BP_BaseCharacter
+MRUItem17=/Game/TopDownBP/Blueprints/TopDownController
 
 [DetailCategories]
 TopDownController_C.Default=True
@@ -566,6 +570,142 @@ UserDefinedStruct.Structure=True
 UserDefinedStruct.DefaultValues=True
 UserDefinedEnum.Enumerators=True
 UserDefinedEnum.Description=True
+BP_BoardBaseCharacter_C.Default=True
+BP_BoardBaseCharacter_C.Tick=True
+BP_BoardBaseCharacter_C.Character=True
+BP_BoardBaseCharacter_C.Camera=True
+BP_BoardBaseCharacter_C.Pawn=True
+BP_BoardBaseCharacter_C.Replication=True
+BP_BoardBaseCharacter_C.Rendering=True
+BP_BoardBaseCharacter_C.Collision=True
+BP_BoardBaseCharacter_C.Actor=True
+BP_BoardBaseCharacter_C.Input=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+SkeletalMeshComponent.Materials=True
+BP_Die_C.Tick=True
+BP_Die_C.Replication=True
+BP_Die_C.Rendering=True
+BP_Die_C.Collision=True
+BP_Die_C.Actor=True
+BP_Die_C.Input=True
+TextRenderComponent.Variable=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Sockets=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.ComponentTick=True
+TextRenderComponent.Navigation=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.Tags=True
+TextRenderComponent.ComponentReplication=True
+TextRenderComponent.Cooking=True
+TextRenderComponent.Events=True
+BP_Die_C.TransformCommon=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+BP_Die_C.Default=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+WorldSettings.Tick=True
+WorldSettings.LODSystem=True
+WorldSettings.Audio=True
+WorldSettings.Rendering=True
+WorldSettings.VR=True
+WorldSettings.Broadphase=True
+WorldSettings.Physics=True
+WorldSettings.World=True
+WorldSettings.Lightmass=True
+WorldSettings.GameMode=True
+WorldSettings.PrecomputedVisibility=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+BP_DiceManager_C.Tick=True
+BP_DiceManager_C.Replication=True
+BP_DiceManager_C.Rendering=True
+BP_DiceManager_C.Collision=True
+BP_DiceManager_C.Actor=True
+BP_DiceManager_C.Input=True
+BP_DiceManager_C.TransformCommon=True
+PropertyWrapper.Events=True
+BP_DiceManager_C.Default=True
+BillboardComponent.Variable=True
+BillboardComponent.TransformCommon=True
+BillboardComponent.Sockets=True
+BillboardComponent.Sprite=True
+BillboardComponent.ComponentTick=True
+BillboardComponent.Rendering=True
+BillboardComponent.Navigation=True
+BillboardComponent.Tags=True
+BillboardComponent.ComponentReplication=True
+BillboardComponent.Cooking=True
+BillboardComponent.Events=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Sun=True
+AtmosphericFog.Ground=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Activation=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Replication=True
+AtmosphericFog.Actor=True
 
 [PluginBrowser]
 InstalledPlugins=EasyMultiSave
@@ -577,6 +717,8 @@ InstalledPlugins=XRVisualization
 CryptoKeysSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Dice/BP_Die.BP_Die;
+RecentlyPlaced=/Game/Blueprints/Dice/BP_DiceManager.BP_DiceManager;
 RecentlyPlaced=/Game/Blueprints/Spaces/BP_BoardSpace.BP_BoardSpace;
 
 [AssetEditorToolkitTabLocation]
@@ -645,6 +787,7 @@ bMaterialQualityUsed[3]=0
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 MaterialExpression="\"Object.Constant\" "
 Object=
+BP_DiceManager_C=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
