Added in random space spawning but with controlled amounts

--- a/GameJame2022/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameJame2022/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,7 +132,6 @@ MRUItem0=/Game/Maps/CoopersPlayground
 MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -148,6 +147,8 @@ BP_BoardSpace_C=
 MulticastInlineDelegatePropertyWrapper=PropertyWrapper.DefaultValueCategory.None,
 BillboardComponent=
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.None,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
+SceneComponent=PropertyWrapper.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Stats
@@ -185,30 +186,28 @@ OpenAssetsAtExit=/Game/Blueprints/Character/BoardCharacters/BP_BoardBaseCharacte
 OpenAssetsAtExit=/Game/Blueprints/Dice/BP_Die.BP_Die
 OpenAssetsAtExit=/Game/Blueprints/Dice/BP_DiceManager.BP_DiceManager
 OpenAssetsAtExit=/Game/Blueprints/Spaces/BP_BoardManager.BP_BoardManager
-OpenAssetsAtExit=/Game/Blueprints/Spaces/BP_BoardSpace.BP_BoardSpace
-OpenAssetsAtExit=/Game/Blueprints/Character/BoardCharacters/BP_BoardAIController.BP_BoardAIController
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Character/BoardCharacters/BP_BoardAIController
-MRUItem1=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem2=/Game/Blueprints/BP_BoardGameMode
-MRUItem3=/Game/Blueprints/Spaces/BP_BoardSpace
-MRUItem4=/Game/Blueprints/Spaces/BP_BoardManager
-MRUItem5=/Game/Blueprints/Gear/S_GearBuff
-MRUItem6=/Game/Blueprints/Dice/BP_DiceManager
-MRUItem7=/Game/Blueprints/Dice/BP_Die
-MRUItem8=/Game/Blueprints/Character/BoardCharacters/BP_BoardBaseCharacter
-MRUItem9=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem10=/Game/Maps/CoopersPlayground
-MRUItem11=/Game/Blueprints/Stats/S_StatBuff
-MRUItem12=/Game/Blueprints/Gear/E_Stat
-MRUItem13=/Game/Blueprints/Items/E_ItemType
-MRUItem14=/Game/Blueprints/Items/S_Item
-MRUItem15=/Game/Blueprints/Gear/E_GearType
-MRUItem16=/Game/Blueprints/Gear/S_GearBase
-MRUItem17=/Engine/Functions/Engine_MaterialFunctions01/Gradient/RadialGradientExponential
-MRUItem18=/Game/Materials/M_SpaceBase
-MRUItem19=/Game/Character/BP_ActionBaseCharacter
+MRUItem0=/Game/Blueprints/Spaces/BP_ItemSpace
+MRUItem1=/Game/Materials/MI_SpaceBaseGreen
+MRUItem2=/Game/Materials/M_SpaceBase
+MRUItem3=/Game/Materials/MI_SpaceBaseRed
+MRUItem4=/Game/Blueprints/Spaces/S_BoardSpaceAmounts
+MRUItem5=/Game/Blueprints/Spaces/BP_BattleSpace
+MRUItem6=/Game/Blueprints/Character/BoardCharacters/BP_BoardAIController
+MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem8=/Game/Blueprints/BP_BoardGameMode
+MRUItem9=/Game/Blueprints/Spaces/BP_BoardSpace
+MRUItem10=/Game/Blueprints/Spaces/BP_BoardManager
+MRUItem11=/Game/Blueprints/Gear/S_GearBuff
+MRUItem12=/Game/Blueprints/Dice/BP_DiceManager
+MRUItem13=/Game/Blueprints/Dice/BP_Die
+MRUItem14=/Game/Blueprints/Character/BoardCharacters/BP_BoardBaseCharacter
+MRUItem15=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem16=/Game/Maps/CoopersPlayground
+MRUItem17=/Game/Blueprints/Stats/S_StatBuff
+MRUItem18=/Game/Blueprints/Gear/E_Stat
+MRUItem19=/Game/Blueprints/Items/E_ItemType
 
 [DetailCategories]
 TopDownController_C.Default=True
@@ -1018,6 +1017,26 @@ NavMeshBoundsVolume.Cooking=True
 NavMeshBoundsVolume.Replication=True
 NavMeshBoundsVolume.BrushSettings=True
 NavMeshBoundsVolume.Actor=True
+BP_BattleSpace_C.Tick=True
+BP_BattleSpace_C.Replication=True
+BP_BattleSpace_C.Rendering=True
+BP_BattleSpace_C.Collision=True
+BP_BattleSpace_C.Actor=True
+BP_BattleSpace_C.Input=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+BP_ItemSpace_C.Tick=True
+BP_ItemSpace_C.Replication=True
+BP_ItemSpace_C.Rendering=True
+BP_ItemSpace_C.Collision=True
+BP_ItemSpace_C.Actor=True
+BP_ItemSpace_C.Input=True
 
 [PluginBrowser]
 InstalledPlugins=EasyMultiSave
@@ -1044,6 +1063,13 @@ RecentlyPlaced=/Game/Blueprints/Spaces/BP_BoardSpace.BP_BoardSpace;
 /Game/Blueprints/Gear/S_GearBuff.S_GearBuff=0
 /Game/Blueprints/BP_BoardGameMode.BP_BoardGameMode=0
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
+/Game/Materials/MI_SpaceBaseGreen.MI_SpaceBaseGreen=0
+/Game/Materials/MI_SpaceBaseRed.MI_SpaceBaseRed=0
+/Game/Blueprints/Spaces/S_BoardSpaceAmounts.S_BoardSpaceAmounts=0
+/Game/Blueprints/Spaces/BP_ItemSpace.BP_ItemSpace=0
+/Game/Blueprints/Spaces/BP_BattleSpace.BP_BattleSpace=0
+/Game/Blueprints/Character/BoardCharacters/BP_BoardAIController.BP_BoardAIController=0
+/Game/Blueprints/Spaces/BP_BoardSpace.BP_BoardSpace=0
 
 [MaterialEditor]
 PrimType=1
@@ -1105,10 +1131,10 @@ bMaterialQualityUsed[3]=0
 
 [DetailPropertyExpansion]
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
-MaterialExpression="\"Object.Constant\" "
+MaterialExpression=
 Object=
 BP_DiceManager_C=
-BP_BoardManager_C="\"Object.Default.SpaceLocations\" "
+BP_BoardManager_C="\"Object.Default.SpaceLocations\" \"Object.Default.BoardSpaceAmounts\" \"Object.Default.BoardSpaceAmounts.BoardSpaceAmounts[0]\" \"Object.Default.BoardSpaceAmounts.BoardSpaceAmounts[1]\" \"Object.Default.BoardSpaceAmounts.BoardSpaceAmounts[2]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -2212,4 +2238,9 @@ LastLogListing=PIE
 
 [DetailCategoriesAdvanced]
 K2Node_CustomEvent.Graph=False
+
+[MaterialInstanceEditor]
+bShowGrid=True
+bDrawGrid=False
+PrimType=1
 
