Added Base Helm

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ DerivedDataCache/*
 GameJame2022/Saved/Logs/GameJame2022.log
 *.log
 GameJame2022/Saved/Logs/GameJame2022.log
+GameJame2022/Intermediate/CachedAssetRegistry.bin
