--- a/GameJame2022/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameJame2022/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,6 +149,7 @@ BillboardComponent=
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.None,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 SceneComponent=PropertyWrapper.DefaultValueCategory.None,
+Base_Helm_C=PropertyWrapper.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Stats
@@ -182,28 +183,29 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Gear/Base_Helm.Base_Helm
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Spaces/BP_ItemSpace
-MRUItem1=/Game/Materials/MI_SpaceBaseGreen
-MRUItem2=/Game/Materials/M_SpaceBase
-MRUItem3=/Game/Materials/MI_SpaceBaseRed
-MRUItem4=/Game/Blueprints/Spaces/S_BoardSpaceAmounts
-MRUItem5=/Game/Blueprints/Spaces/BP_BattleSpace
-MRUItem6=/Game/Blueprints/Character/BoardCharacters/BP_BoardAIController
-MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem8=/Game/Blueprints/BP_BoardGameMode
-MRUItem9=/Game/Blueprints/Spaces/BP_BoardSpace
-MRUItem10=/Game/Blueprints/Spaces/BP_BoardManager
-MRUItem11=/Game/Blueprints/Gear/S_GearBuff
-MRUItem12=/Game/Blueprints/Dice/BP_DiceManager
-MRUItem13=/Game/Blueprints/Dice/BP_Die
-MRUItem14=/Game/Blueprints/Character/BoardCharacters/BP_BoardBaseCharacter
-MRUItem15=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem16=/Game/Maps/CoopersPlayground
-MRUItem17=/Game/Blueprints/Stats/S_StatBuff
-MRUItem18=/Game/Blueprints/Gear/E_Stat
-MRUItem19=/Game/Blueprints/Items/E_ItemType
+MRUItem0=/Game/Blueprints/Gear/S_GearBase
+MRUItem1=/Game/Blueprints/Gear/Base_Helm
+MRUItem2=/Game/Blueprints/Gear/E_GearType
+MRUItem3=/Game/Blueprints/Spaces/BP_ItemSpace
+MRUItem4=/Game/Materials/MI_SpaceBaseGreen
+MRUItem5=/Game/Materials/M_SpaceBase
+MRUItem6=/Game/Materials/MI_SpaceBaseRed
+MRUItem7=/Game/Blueprints/Spaces/S_BoardSpaceAmounts
+MRUItem8=/Game/Blueprints/Spaces/BP_BattleSpace
+MRUItem9=/Game/Blueprints/Character/BoardCharacters/BP_BoardAIController
+MRUItem10=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem11=/Game/Blueprints/BP_BoardGameMode
+MRUItem12=/Game/Blueprints/Spaces/BP_BoardSpace
+MRUItem13=/Game/Blueprints/Spaces/BP_BoardManager
+MRUItem14=/Game/Blueprints/Gear/S_GearBuff
+MRUItem15=/Game/Blueprints/Dice/BP_DiceManager
+MRUItem16=/Game/Blueprints/Dice/BP_Die
+MRUItem17=/Game/Blueprints/Character/BoardCharacters/BP_BoardBaseCharacter
+MRUItem18=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem19=/Game/Maps/CoopersPlayground
 
 [DetailCategories]
 TopDownController_C.Default=True
@@ -1033,6 +1035,12 @@ BP_ItemSpace_C.Rendering=True
 BP_ItemSpace_C.Collision=True
 BP_ItemSpace_C.Actor=True
 BP_ItemSpace_C.Input=True
+Base_Helm_C.Tick=True
+Base_Helm_C.Replication=True
+Base_Helm_C.Rendering=True
+Base_Helm_C.Collision=True
+Base_Helm_C.Actor=True
+Base_Helm_C.Input=True
 
 [PluginBrowser]
 InstalledPlugins=EasyMultiSave
@@ -1066,6 +1074,8 @@ RecentlyPlaced=/Game/Blueprints/Spaces/BP_BoardSpace.BP_BoardSpace;
 /Game/Blueprints/Spaces/BP_BattleSpace.BP_BattleSpace=0
 /Game/Blueprints/Character/BoardCharacters/BP_BoardAIController.BP_BoardAIController=0
 /Game/Blueprints/Spaces/BP_BoardSpace.BP_BoardSpace=0
+/Game/Blueprints/Gear/E_GearType.E_GearType=1
+/Game/Blueprints/Gear/S_GearBase.S_GearBase=1
 
 [MaterialEditor]
 PrimType=1
@@ -1148,6 +1158,7 @@ SceneComponent=
 ActorComponent=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent=
+Base_Helm_C="\"Object.S_Gear\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
