Updated move dice models and materials

--- a/GameJame2022/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameJame2022/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,12 +128,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Maps/CoopersPlayground
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Maps/CoopersPlayground
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 UserDefinedStruct=
@@ -150,7 +151,6 @@ CapsuleComponent=PropertyWrapper.DefaultValueCategory.None,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 SceneComponent=PropertyWrapper.DefaultValueCategory.None,
 Base_Helm_C=
-BP_ActionBaseCharacter_C=PropertyWrapper.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Stats
@@ -180,34 +180,32 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/CoopersPlayground
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Character/ActionCharacters/BP_ActionBaseCharacter.BP_ActionBaseCharacter
-OpenAssetsAtExit=/Game/Blueprints/Gear/Base_Helm.Base_Helm
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Gear/Base_Weapon
-MRUItem1=/Game/Blueprints/Gear/Base_Legs
-MRUItem2=/Game/Blueprints/Gear/Base_Chest
-MRUItem3=/Game/Blueprints/Gear/Base_Helm
-MRUItem4=/Game/Maps/CoopersPlayground
-MRUItem5=/Game/Blueprints/Dice/BP_Die
-MRUItem6=/Game/Blueprints/Character/ActionCharacters/BP_ActionBaseCharacter
-MRUItem7=/Game/Blueprints/Gear/S_GearBase
-MRUItem8=/Game/Blueprints/Gear/E_GearType
-MRUItem9=/Game/Blueprints/Spaces/BP_ItemSpace
-MRUItem10=/Game/Materials/MI_SpaceBaseGreen
-MRUItem11=/Game/Materials/M_SpaceBase
-MRUItem12=/Game/Materials/MI_SpaceBaseRed
-MRUItem13=/Game/Blueprints/Spaces/S_BoardSpaceAmounts
-MRUItem14=/Game/Blueprints/Spaces/BP_BattleSpace
-MRUItem15=/Game/Blueprints/Character/BoardCharacters/BP_BoardAIController
-MRUItem16=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem17=/Game/Blueprints/BP_BoardGameMode
-MRUItem18=/Game/Blueprints/Spaces/BP_BoardSpace
-MRUItem19=/Game/Blueprints/Spaces/BP_BoardManager
+MRUItem0=/Game/Geometry/Meshes/Move_Die_2
+MRUItem1=/Game/Geometry/Meshes/Move_Die_1
+MRUItem2=/Game/Textures/Move_Dice_Textures/Move_Die_1_Material
+MRUItem3=/Game/Blueprints/Gear/S_GearBase
+MRUItem4=/Game/Blueprints/Gear/Base_Helm
+MRUItem5=/Game/Blueprints/Gear/E_GearType
+MRUItem6=/Game/Blueprints/Spaces/BP_ItemSpace
+MRUItem7=/Game/Materials/MI_SpaceBaseGreen
+MRUItem8=/Game/Materials/M_SpaceBase
+MRUItem9=/Game/Materials/MI_SpaceBaseRed
+MRUItem10=/Game/Blueprints/Spaces/S_BoardSpaceAmounts
+MRUItem11=/Game/Blueprints/Spaces/BP_BattleSpace
+MRUItem12=/Game/Blueprints/Character/BoardCharacters/BP_BoardAIController
+MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem14=/Game/Blueprints/BP_BoardGameMode
+MRUItem15=/Game/Blueprints/Spaces/BP_BoardSpace
+MRUItem16=/Game/Blueprints/Spaces/BP_BoardManager
+MRUItem17=/Game/Blueprints/Gear/S_GearBuff
+MRUItem18=/Game/Blueprints/Dice/BP_DiceManager
+MRUItem19=/Game/Blueprints/Dice/BP_Die
 
 [DetailCategories]
 TopDownController_C.Default=True
@@ -1043,25 +1041,21 @@ Base_Helm_C.Rendering=True
 Base_Helm_C.Collision=True
 Base_Helm_C.Actor=True
 Base_Helm_C.Input=True
-Base_Helm_C.Default=True
-Base_Chest_C.Tick=True
-Base_Chest_C.Replication=True
-Base_Chest_C.Rendering=True
-Base_Chest_C.Collision=True
-Base_Chest_C.Actor=True
-Base_Chest_C.Input=True
-Base_Legs_C.Tick=True
-Base_Legs_C.Replication=True
-Base_Legs_C.Rendering=True
-Base_Legs_C.Collision=True
-Base_Legs_C.Actor=True
-Base_Legs_C.Input=True
-Base_Weapon_C.Tick=True
-Base_Weapon_C.Replication=True
-Base_Weapon_C.Rendering=True
-Base_Weapon_C.Collision=True
-Base_Weapon_C.Actor=True
-Base_Weapon_C.Input=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionConstant4Vector.MaterialExpressionConstant4Vector=True
+MaterialExpressionConstant4Vector.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
 
 [PluginBrowser]
 InstalledPlugins=EasyMultiSave
@@ -1098,7 +1092,8 @@ RecentlyPlaced=/Game/Blueprints/Spaces/BP_BoardSpace.BP_BoardSpace;
 /Game/Blueprints/Gear/E_GearType.E_GearType=1
 /Game/Blueprints/Gear/S_GearBase.S_GearBase=1
 /Game/Blueprints/Gear/Base_Helm.Base_Helm=1
-/Game/Blueprints/Dice/BP_Die.BP_Die=1
+/Game/Geometry/Meshes/Move_Die_1.Move_Die_1=1
+/Game/Geometry/Meshes/Move_Die_2.Move_Die_2=1
 
 [MaterialEditor]
 PrimType=1
@@ -1168,21 +1163,20 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 BP_BoardBaseCharacter_C=
-Character="\"Object.S_GearBase\" "
-Pawn="\"Object.S_GearBase\" "
+Character=
+Pawn=
 BP_BoardSpace_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent=
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent=
-Base_Helm_C=
-BP_ActionBaseCharacter_C="\"Object.S_GearBase\" "
+Base_Helm_C="\"Object.S_Gear\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2265,7 +2259,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [DetailCategoriesAdvanced]
 K2Node_CustomEvent.Graph=False
