--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@ GameJame2022/Saved/Logs/GameJame2022.log
 *.log
 GameJame2022/Saved/Logs/GameJame2022.log
 GameJame2022/Intermediate/CachedAssetRegistry.bin
+GameJame2022/Intermediate/CachedAssetRegistry.bin
+GameJame2022/Saved/Config/CrashReportClient/UE4CC-Windows-E643430343BD052FB3FDF8AAB37F9E76/CrashReportClient.ini
+GameJame2022/Saved/Config/Windows/Engine.ini
